Changed style sheet to prevent overlapping

--- a/app/static/css/achievements.css
+++ b/app/static/css/achievements.css
@@ -43,6 +43,9 @@
     padding: 8px 16px;
     text-decoration: none;
     transition: background-color .3s;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
 }
 
 .my-button a.active {
